--- a/index.html
+++ b/index.html
@@ -24,33 +24,24 @@
       align-items: center;
       min-height: 100vh;
       padding: 0 4vw;
-      position: relative;
-    }
-
-    .main-layout::before {
-      content: "";
-      position: absolute;
-      top: 35%;
-      bottom: 35%;
-      left: 50%;
-      width: 1px;
-      background: darkred;
     }
 
     .nav-links {
-      grid-column: 3;
-      justify-self: center; 
-      align-self: center;     
+      grid-column: 3;     
       list-style: none;
-      padding: 5px;
       display: flex;
-      gap: 200px;
+      justify-self: start; 
+      align-self: center;
+      margin-left: clamp(1rem, 5vw, 6rem);
+      gap: clamp(1rem, 10vw, 6rem);
+      padding: 0;
+      margin: 0;
     }
 
     .nav-links li a {
       color: black;
       font-weight: bold;
-      font-size: 18px;
+      font-size: clamp(0.8rem, 1.1rem, 1.2rem);
       text-decoration: none;
     }
 
@@ -60,11 +51,55 @@
 
     .logo {
       grid-column: 1;
-      max-width: 30px;
-      width: 100%;
+      width: clamp(150px, 25vw, 300px);
       height: auto;
       justify-self: center;
       align-self: center;
+    }
+
+    @media (max-width: 600px) {
+      .main-layout {
+       display: grid;
+       grid-template-columns: 1fr;
+       grid-template-rows: auto auto;
+      }
+
+      .nav-links {
+        grid-column: 1;
+        grid-row: 2;
+        flex-direction: column;
+        gap:1rem;
+        margin-left: 0;
+        justify-self: center;
+        text-align: center;
+      }
+
+      .logo {
+        grid-column: 1;
+        grid-row: 1; 
+        justify-self: center;
+        width: clamp(120px, 30vw, 200px);
+      }
+      /* .main-layout {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto;
+        gap: 2rem;
+        text-align: center;
+      }
+
+      .logo {
+        grid-column: 1;
+        width: clamp(120px, 40vw, 200px);
+        justify-self: center;
+      }
+
+      .nav-links {
+        grid-column: 1;
+        grid-row: 3;
+        justify-self: center;
+        margin-left: 0;
+        gap: clamp(0.5rem, 5vw, 3rem);
+      } */
     }
 
 
