logo and list update on index. for mobile

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         gap:1rem;
         margin-left: 0;
         justify-self: center;
+        align-self: start;
         text-align: center;
       }
 
@@ -78,7 +79,7 @@
         grid-column: 1;
         grid-row: 1; 
         justify-self: center;
-        width: clamp(120px, 30vw, 200px);
+        width: clamp(200px, 30vw, 200px);
       }
       /* .main-layout {
         grid-template-columns: 1fr;
