--- a/contact.html
+++ b/contact.html
@@ -5,103 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ABBB</title>
-
-  <style> 
-
-    *, *::before, *::after {box-sizing: border-box;}
-    html, body {margin:0; padding: 0;}
-
-    body {
-      font-family: "Times New Roman", Times, serif;
-      background: url("cubes.png") repeat, #f8f8f2;
-      background-blend-mode:multiply;
-      background-size: auto;
-    }
-
-    .main-layout {
-      display: grid;
-      grid-template-rows: auto 1fr;
-      grid-template-columns: 1fr 3fr;
-      align-items: center;
-      min-height: 100vh;
-      padding: 0 4vw;
-    }
-
-        .nav-links {
-      grid-row: 1;
-      grid-column: 2;
-      justify-self: end; 
-      align-self: end;     
-      list-style: none;
-      margin: 0 10%;
-      padding: 0px;
-      display: flex;
-      gap: 200px;
-    }
-
-    .nav-links li a {
-      color: black;
-      font-weight: bold;
-      font-size: 18px;
-      text-decoration: none;
-    }
-
-    .nav-links a.posts:hover {color: #ac0530}
-    .nav-links a.home:hover {color: #046637;}
-    .nav-links a.about:hover {color: #046637;}
-
-    .logo {
-      grid-row: 1;
-      grid-column: 1;
-      max-width: 250px;
-      width: 100%;
-      height: auto;
-      justify-self: start;
-      margin-top: 5%;
-    }
-
-    .contact-caption {
-      grid-row: 2;
-      grid-column: 1;
-      max-width: 30%;
-      align-self: start;
-      justify-self: end;
-      margin-top: 16%;
-      margin-right: -45%;
-      color: #1b1a55;
-    }
-
-    .contact-content {
-      grid-row: 2;
-      grid-column: 2;
-      max-width: 50%;
-      width: 100%;
-      justify-self: center;
-      align-self: start;
-      margin-top: 6%;
-      margin-bottom: 6%;
-      margin-left: 0%;
-      padding-left: 2%;
-      padding-right: 5%;
-      padding-top: 1%;
-      border-left: 1px solid darkred;
-      background: #f8f8f2;
-      list-style: none;
-    }
-
-    hr {
-      grid-row: 2;
-      grid-column: 1 / -1;
-      width: 100%;
-      border: none;
-      border-top: 2px solid darkred;
-      margin: 20px 0;
-      align-self: start;
-      justify-self: center;
-    }
-
-  </style>
-
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -116,11 +20,11 @@
       <li><a href="about.html" class="about">About</a></li>
     </ul>
 
-    <div class="contact-caption">
+    <div class="title">
         <h1>Contact</h1>
     </div>
 
-    <div class="contact-content">
+    <div class="content">
         <h3>Email:</h3><p>aidanomaille@gmail.com</p>
         <h3>Phone</h3><p>(301) 401-2689</p>
     </div>
