--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       grid-column: 3;     
       list-style: none;
       display: flex;
-      justify-self: start; 
+      justify-self: center; 
       align-self: center;
       margin-left: clamp(1rem, 5vw, 6rem);
       gap: clamp(1rem, 10vw, 6rem);
