changed logo/design on all pages

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
   <div class="main-layout">
 
-    <img src="ABBB Logo 2.png" alt="ABBB" class="logo">
+    <img src="CSOBT-logo-anatol-grain.png" alt="ABBB" class="logo">
 
     <ul class="nav-links">
       <li><a href="index.html" class="home">Home</a></li>
