--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
   <div class="main-layout">
 
-    <img src="ABBB Logo 2.png" alt="ABBB" class="logo">
+    <img src="CSOBT-logo-anatol-grain.png" alt="ABBB" class="logo">
 
     <ul class="nav-links">
       <li><a href="index.html" class="home">Home</a></li>
@@ -25,8 +25,9 @@
     </div>
 
     <div class="content">
-        <h3>Email:</h3><p>aidanomaille@gmail.com</p>
+        <h3>Email:</h3><p><a href="mailto:aidanomaille@gmail.com">aidanomaille@gmail.com</a></p>
         <h3>Phone</h3><p>(301) 401-2689</p>
+        <h3>LinkedIn</h3><p><a href="https://www.linkedin.com/in/aidanomaille/" target="_blank">www.linkedin.com/in/aidanomaille</a></p>
     </div>
 
     <hr>
