--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     body {
       font-family: "Times New Roman", Times, serif;
-      background: url("cubes.png") repeat, #f8f8f2;
+      background: url("backgroun-grain-2.png") repeat, #f8f8f2;
+      /* background:#f8f8f2; */
       background-blend-mode:multiply;
       background-size: auto;
     }
@@ -51,7 +52,7 @@
 
     .logo {
       grid-column: 1;
-      width: clamp(150px, 25vw, 300px);
+      width: clamp(150px, 40vw, 400px);
       height: auto;
       justify-self: center;
       align-self: center;
@@ -92,7 +93,7 @@
 
   <div class="main-layout">
 
-    <img src="ABBB Logo 2.png" alt="ABBB" class="logo">
+    <img src="CSOBT-logo-anatol-grain-caption-2.png" alt="ABBB" class="logo">
 
     <ul class="nav-links">
       <li><a href="posts.html" class="posts">Posts</a></li>
