--- a/about.html
+++ b/about.html
@@ -33,6 +33,10 @@
         <p>- Aidan O'Maille</p>
     </section>
 
+    <textarea class="footer">
+      © 2025 Aidan O'Maille. All rights reserved.
+    </textarea>
+
     <hr>
 
   </div>
