--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,13 @@
 
     <div class="content">
         <h3>Email:</h3><p><a href="mailto:aidanomaille@gmail.com">aidanomaille@gmail.com</a></p>
-        <h3>Phone</h3><p>(301) 401-2689</p>
-        <h3>LinkedIn</h3><p><a href="https://www.linkedin.com/in/aidanomaille/" target="_blank">www.linkedin.com/in/aidanomaille</a></p>
+        <h3>Phone:</h3><p>(301) 401-2689</p>
+        <h3>LinkedIn:</h3><p><a href="https://www.linkedin.com/in/aidanomaille/" target="_blank">www.linkedin.com/in/aidanomaille</a></p>
     </div>
+
+    <textarea class="footer">
+      © 2025 Aidan O'Maille. All rights reserved.
+    </textarea>
 
     <hr>
 
