--- a/posts.html
+++ b/posts.html
@@ -32,7 +32,9 @@
 
     </ul>
 
-    
+    <textarea class="footer">
+      © 2025 Aidan O'Maille. All rights reserved.
+    </textarea>
 
     <hr>
 
