Added new post "Trends"

--- a/posts.html
+++ b/posts.html
@@ -28,7 +28,7 @@
     <ul class="content">
 
       <li><a href="posts_genomics_and_personalized_medicine.html">Genomics and Personalized Medicine: Towards the Future of Healthcare</a><p>Diseases such as cancer, neurodegenerative diseases (i.e. Parkinson’s, Alzheimer’s) and mental health disorders, have multifactorial and complex backgrounds involving genetic, environmental, and personal attributes (Yamamoto et al., 2022; Perna & Nemeroff, 2022). Even between patients with the same disease, the pathogenesis and causative factors relating to the disease...</p></li>
-
+      <li><a href="posts_trends.html">Trends in Biotechnology: CRISPR, Bioprinting, and AlphaFold</a><p>The Human Genome Project, a 13-year undertaking completed in 2003, marked the first time that the entire human genome was sequenced, and was a major breakthrough in biotechnology (National Human Genome Research Institute, 2024). In 2022 - just 19 years later - the Guinness World Record for fastest human genome sequencing was set with a time of just 5 hours and 2 minutes...</p></li>
 
     </ul>
 
