changed logos and favicons

--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSOBT</title>
   <link rel="stylesheet" href="main.css">
-  <link rel="icon" type="image/png" href="CSOBT-favicon.png">
+  <link rel="icon" type="image/png" href="INDELS_favicon_new.png">
 </head>
 
 <body class ="contact">
 
   <div class="main-layout">
 
-    <img src="CSOBT-logo-anatol-grain.png" alt="ABBB" class="logo">
+    <img src="INDELS_logo_pages.png" alt="ABBB" class="logo">
 
     <ul class="nav-links">
       <li><a href="index.html" class="home">Home</a></li>
