--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSOBT</title>
-  <link rel="icon" type="image/png" href="CSOBT-favicon.png">
+  <link rel="icon" type="image/png" href="INDELS_favicon_new.png">
 
   <style> 
 
@@ -108,7 +108,7 @@
 
   <div class="main-layout">
 
-    <img src="CSOBT-logo-anatol-grain-caption-2.png" alt="ABBB" class="logo">
+    <img src="INDELS_logo_main.png" alt="ABBB" class="logo">
 
     <ul class="nav-links">
       <li><a href="posts.html" class="posts">Posts</a></li>
